--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="dropdown">
     <div class="circulo" id="bola"></div>   
       <div id="myDropdown" class="dropdown-content">
-      <table>
+      <table id = "tableId">
         <tr>
             <th class="col1">Dia</th>
             <th class="col2">Celebração</th>
